--- a/dio/dock.css
+++ b/dio/dock.css
@@ -31,26 +31,6 @@
     border-top-color: #444;
 }
 
-#dock input[type=checkbox] {
-    display: none;
-}
-
-#dock .checkbox {
-    padding: 3px 12px;
-}
-
-#dock .checkbox::before {
-    content: '';
-    display: block;
-    transition: opacity 0.2s;
-    width: 10px;
-    height: 15px;
-    border-right: 3px solid #53b300;
-    border-bottom: 3px solid #53b300;
-    transform: rotate(45deg);
-    opacity: 0;
-}
-
-#dock input[type=checkbox]:checked+.checkbox::before {
-    opacity: 1;
+#dock tr {
+    cursor: pointer;
 }
