--- a/mtz/style.css
+++ b/mtz/style.css
@@ -1,3 +1,12 @@
+/* Blumaとエオルゼアデータベースのツールチップの競合に対処する */
+*, ::after, ::before {
+  box-sizing: content-box;  
+}
+.button {
+  padding-top: calc(0.1em - 1px);
+  padding-bottom: calc(0.1em - 1px);
+}
+
 .checked {
   text-align: right;
   display: block;
@@ -32,6 +41,7 @@ input[type=checkbox] {
 input[type=checkbox]:checked+.checkbox:before {
   opacity: 1;
 }
+
 
 @media screen and (max-width: 380px) {
   header, footer {
