--- a/mtz/style.css
+++ b/mtz/style.css
@@ -42,6 +42,10 @@ input[type=checkbox]:checked+.checkbox:before {
   opacity: 1;
 }
 
+body {
+  animation: fadeIn 2s ease 0s 1 normal;
+  -webkit-animation: fadeIn 2s ease 0s 1 normal;
+}
 
 @media screen and (max-width: 380px) {
   header, footer {
