--- a/mtz/style.css
+++ b/mtz/style.css
@@ -46,3 +46,9 @@ body {
   animation: fadeIn 2s ease 0s 1 normal;
   -webkit-animation: fadeIn 2s ease 0s 1 normal;
 }
+
+@media screen and (max-width: 767px) {
+  header, footer {
+    width: 768px;
+  }
+}
