--- a/mtz/style.css
+++ b/mtz/style.css
@@ -52,3 +52,19 @@ body {
     width: 768px;
   }
 }
+@keyframes fadeIn {
+  0% {
+      opacity: 0
+  }
+  100% {
+      opacity: 1
+  }
+}
+@-webkit-keyframes fadeIn {
+  0% {
+      opacity: 0
+  }
+  100% {
+      opacity: 1
+  }
+}
